--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 jobs:
-  lint:
+  build:
     name: GolangCI-Lint
     runs-on: ubuntu-latest
 
@@ -19,6 +19,9 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
+
+      - name: test
+        run: go test -v ./...
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v7
